--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,7 @@
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/no-empty-function": "off",
     "prettier/prettier": ["warn", { "endOfLine": "auto" }],
+    "arrow-body-style": 0,
     "import/extensions": [
       "error",
       "ignorePackages",
